# claude-code-demo

./: .gitignore  README.md  alembic.ini  migrate.py  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  3c20248c869a_initial_schema.py  f1bf4557f2de_individual_applicat.py
claude_code_demo/: database.py  main.py  models.py
platform/: .env.example  README.md  docker-compose.yml
platform/init-scripts/: 01-init.sql
specification/: Generatorapi_GAP.yaml  gap_rating.yaml
